test/good/arr00.inc.c
jwr_arr();
jwr_close();
