test/bad/noseq00.inc.c

jwr_int(0);
jwr_int(0);
